Fix number input too small in firefox due to arrows
FossilOrigin-Name: 4a9b3ebf61c42f0e1abb08232ff0e75fbdd919942e87f9cf5833c705c7c88d30

--- a/src/www/admin/static/styles/03-forms.css
+++ b/src/www/admin/static/styles/03-forms.css
@@ -323,8 +323,12 @@ input[disabled] + label::before {
     cursor: not-allowed;
 }
 
-select, input[size], input[type=color], button, input[type=button], input[type=submit], input[type=number] {
+select, input[size], input[type=color], button, input[type=button], input[type=submit] {
     min-width: 0;
+}
+
+input[type=number] {
+    min-width: 3em;
 }
 
 select {
